<resources>
    <string name="toast_canceling">Canceling…</string>
    <string name="toast_pleaseWait">Please wait…</string>
    <string name="inputMapActivity_popupMessage">Press a button, key, or joystick to map…\n\nCurrent mappings:\n%1$s</string>
    <string name="inputMapActivity_popupUnmap">Unmap</string>
    <string name="inputMapActivity_btnA">A</string>
    <string name="inputMapActivity_btnB">B</string>
    <string name="inputMapActivity_btnC">C</string>
    <string name="inputMapActivity_btnL">L</string>
    <string name="inputMapActivity_btnR">R</string>
    <string name="inputMapActivity_btnZ">Z</string>
    <string name="inputMapActivity_btnS">S</string>
    <string name="inputMapActivity_btnCR">C-pad →</string>
    <string name="inputMapActivity_btnCL">C-pad ←</string>
    <string name="inputMapActivity_btnCD">C-pad ↓</string>
    <string name="inputMapActivity_btnCU">C-pad ↑</string>
    <string name="inputMapActivity_btnDR">D-pad →</string>
    <string name="inputMapActivity_btnDL">D-pad ←</string>
    <string name="inputMapActivity_btnDD">D-pad ↓</string>
    <string name="inputMapActivity_btnDU">D-pad ↑</string>
    <string name="inputMapActivity_btnAR">Analog →</string>
    <string name="inputMapActivity_btnAL">Analog ←</string>
    <string name="inputMapActivity_btnAD">Analog ↓</string>
    <string name="inputMapActivity_btnAU">Analog ↑</string>
    <string name="Hardware">Hardware</string>
    <string name="Other">Other</string>
    <string name="touch_screen_summary">On-screen controller setttings</string>
    <string name="touch_screen_title">Touchscreen</string>
    <string name="input_screen_summary">Controller settings</string>
    <string name="input_screen_title">Input</string>
    <string name="video_screen_summary">Graphic settings</string>
    <string name="video_screen_title">Video</string>
    <string name="audio_screen_summary">Sound settings</string>
    <string name="audio_screen_title">Audio</string>
    <string name="game_list_summary">Game list settings</string>
    <string name="game_list_title">Game list</string>
    <string name="advanced_screen_summary">advanced/debugging settings</string>
    <string name="advanced_screen_title">Advanced</string>
    <string name="reset_summary">Restore default settings</string>
    <string name="reset_title">Reset</string>
    <string name="settings_title">Settings</string>
    <string name="game_settings_title">Game Settings</string>
    <string name="preferences">Preferences</string>
    <string name="displayFps_title">Framerate</string>
    <string name="displayFps_summary">Display FPS on screen</string>
    <string name="audioEnabled_title">Enable Audio</string>
    <string name="audioEnabled_summary">Enable/Disable audio output</string>
    <string name="advancedSettings_title">Hide Advanced Settings</string>
    <string name="advancedSettings_summary">Remove more complex settings that most users will not want to use</string>
    <string name="debuggerEnabled_title">Enable debugger</string>
    <string name="debuggerEnabled_summary">Enable/Disable extra options to try and debug why games do not work</string>
    <string name="BlockLinking_title">Block linking</string>
    <string name="BlockLinking_summary">None: safest. Eager: link sections while compiling. Adaptive: reserved.</string>
    <string name="RecordRecompilerAsm_title">Record Recompiler Asm</string>
    <string name="RecordRecompilerAsm_summary">Create a log file of the asm generated</string>
    <string name="logging">Logging</string>
    <string name="project64core">Project64 Core</string>
    <string name="AudioPlugin">Audio Plugin</string>
    <string name="VideoPlugin">Video Plugin</string>
    <string name="logging_project64core">Logging - Project64 Core</string>
    <string name="logging_Audio">Logging - Audio</string>
    <string name="logging_Video">Logging - Video</string>
    <string name="TraceError">Error</string>
    <string name="TraceWarning">Warning</string>
    <string name="TraceNotice">Notice</string>
    <string name="TraceInfo">Info</string>
    <string name="TraceDebug">Debug</string>
    <string name="TraceVerbose">Verbose</string>
    <string name="TraceMD5">MD5</string>
    <string name="TraceThread">Thread</string>
    <string name="TracePath">Path</string>
    <string name="TraceSettings">Settings</string>
    <string name="TraceUnknown">Unknown</string>
    <string name="TraceAppInit">App Init</string>
    <string name="TraceAppCleanup">App Cleanup</string>
    <string name="TraceN64System">N64 System</string>
    <string name="TracePlugins">Plugins</string>
    <string name="TraceGFXPlugin">GFX Plugin</string>
    <string name="TraceAudioPlugin">Audio Plugin</string>
    <string name="TraceControllerPlugin">Controller Plugin</string>
    <string name="TraceRSPPlugin">RSP Plugin</string>
    <string name="TraceRSP">RSP</string>
    <string name="TraceAudio">Audio</string>
    <string name="TraceRegisterCache">Register Cache</string>
    <string name="TraceRecompiler">Recompiler</string>
    <string name="TraceTLB">TLB</string>
    <string name="TraceProtectedMem">Protected Mem</string>
    <string name="TraceUserInterface">User Interface</string>
    <string name="TraceRomList">Rom List</string>
    <string name="TraceExceptionHandler">Exception Handler</string>
    <string name="TraceVideoMD5">MD5</string>
    <string name="TraceVideoThread">Thread</string>
    <string name="TraceVideoPath">Path</string>
    <string name="TraceVideoSettings">Settings</string>
    <string name="TraceVideoUnknown">Unknown</string>
    <string name="TraceVideoGlide64">Glide64</string>
    <string name="TraceVideoInterface">Interface</string>
    <string name="TraceVideoResolution">Resolution</string>
    <string name="TraceVideoGlitch">Glitch</string>
    <string name="TraceVideoTLUT">TLUT</string>
    <string name="TraceVideoPNG">PNG</string>
    <string name="TraceVideoOGLWrapper">OGL Wrapper</string>
    <string name="TraceVideoRDP">RDP</string>
    <string name="TraceAudioInitShutdown">Init/Shutdown</string>
    <string name="TraceAudioAudioInterface">Interface</string>
    <string name="CpuType">CPU core style</string>
    <string name="Interpreter">Interpreter</string>
    <string name="Recompiler">Recompiler</string>
    <string name="SyncCores">Synchronize Cores</string>
    <string name="Advanced">Advanced</string>
    <string name="CpuUsage_title">CPU Usage</string>
    <string name="CpuUsage_summary">Show the cpu used by different components</string>
    <string name="LimitFPS_summary">Limit the max speed executed</string>
    <string name="LimitFPS_title">Limit FPS</string>
    <string name="screenResolution_title">Rendered Resolution</string>
    <string name="screenResolution_summary">should show value???</string>
    <string name="AspectRatio_title">Aspect ratio</string>
    <string name="AspectRatio_summary">Select the display aspect ratio</string>
    <string name="AspectRatio_4x3">4:3 (default)</string>
    <string name="AspectRatio_16x9">Force 16:9</string>
    <string name="AspectRatio_Stretch">Stretch</string>
    <string name="AspectRatio_Original">Original</string>
    <string name="DisplaySpeed_title">Display Speed</string>
    <string name="DisplaySpeed_summary">Show the speed of the emulation</string>
    <string name="DisplaySpeedDisplay">Display Speed Display</string>
    <string name="DListPerSecond">Display lists per second</string>
    <string name="PercentageOfSpeed">Percentage of full speed</string>
    <string name="VerticalInterruptsPerSecond">Vertical interrupts per second</string>
    <string name="RecordExecutionTimes_title">Record Execution Times</string>
    <string name="RecordExecutionTimes_summary">Record how long each block executes for</string>
    <string name="DebugLanguage_title">Debug Language</string>
    <string name="DebugLanguage_summary">Show the number id for the language string</string>
    <string name="touchscreenScale_title">Button scale</string>
    <string name="touchscreenLayout_title">Touchscreen layout</string>
    <string name="gamepad_summary">Configure gamepad to use in game</string>
    <string name="gamepad_title">Gamepad settings</string>
    <string name="settings_reset_title">Reset settings</string>
    <string name="settings_reset_message">Reset all settings back to their defaults?</string>
    <string name="MaxRomsRemembered_title">Max # of games remembered</string>
    <string-array name="DisplaySpeed_list">
        <item>@string/DListPerSecond</item>
        <item>@string/PercentageOfSpeed</item>
        <item>@string/VerticalInterruptsPerSecond</item>
    </string-array>
    <string-array name="DisplaySpeed_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>0</item>
    </string-array>
    <string-array name="AspectRatio_list">
        <item>@string/AspectRatio_4x3</item>
        <item>@string/AspectRatio_16x9</item>
        <item>@string/AspectRatio_Stretch</item>
        <item>@string/AspectRatio_Original</item>
    </string-array>
    <string-array name="AspectRatio_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="cpu_core_list">
        <item>@string/Interpreter</item>
        <item>@string/Recompiler</item>
        <item>@string/SyncCores</item>
    </string-array>
    <string-array name="cpu_core_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="block_linking_list">
        <item>None</item>
        <item>Eager</item>
        <item>Adaptive (experimental)</item>
    </string-array>
    <string-array name="block_linking_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="trace_severity_list">
        <item>@string/TraceError</item>
        <item>@string/TraceWarning</item>
        <item>@string/TraceNotice</item>
        <item>@string/TraceInfo</item>
        <item>@string/TraceDebug</item>
        <item>@string/TraceVerbose</item>
    </string-array>
    <string name="confirmResetGame_title">Reset game?</string>
    <string name="confirmResetGame_message">The game will go back to a clear state, all progress made will be lost.</string>
    <string name="assetExtractor_startingUp">Starting Up ...</string>
    <string name="assetExtractor_version">version</string>
    <string name="assetExtractor_progress">%1$.0f%% done: extracting - %2$s</string>
    <string name="assetExtractor_finished">Finished</string>
    <string name="assetExtractor_error">Error</string>
    <string name="assetExtractor_failed">Error extracting app data.\nPlease unplug USB cable, reboot device, and re-launch app.\nFor help, please visit %1$s.</string>
    <string name="assetExtractor_failed_permissions">This app cannot proceed without these permissions</string>
    <string name="assetExtractor_permissions_title">Permissions</string>
    <string name="assetExtractor_permissions_rationale">Project64 needs to be able to: \nRead your storage to read game files, save states, and configuration.\nWrite to your storage to write configuration and save data.</string>
    <string name="review_title">Please rate Project64 5 stars</string>
    <string name="review_decription">Please rate Project64 5 stars if you have enjoyed it. Your support and feedback helps makes Project64 better.</string>
    <string name="review_cancel">Don\'t Rate</string>
    <string name="review_ok">Rate 5 Starts</string>
    <string name="scanning_title">Scanning…</string>
</resources>