<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/preferences">

    <PreferenceCategory app:title="@string/Hardware">
        <Preference
            app:key="settings_input"
            app:title="@string/input_screen_title"
            app:summary="@string/input_screen_summary"
            app:icon="@drawable/ic_controller"
            />
        <Preference
            app:key="settings_video"
            app:title="@string/video_screen_title"
            app:summary="@string/video_screen_summary"
            app:icon="@drawable/ic_picture"
            />
        <Preference
            app:key="settings_audio"
            app:title="@string/audio_screen_title"
            app:summary="@string/audio_screen_summary"
            app:icon="@drawable/ic_speaker"
            />
        <Preference
            app:key="settings_game_list"
            app:title="@string/game_list_title"
            app:summary="@string/game_list_summary"
            app:icon="@drawable/ic_storage"
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/Other">
        <Preference
            app:key="settings_advanced"
            app:title="@string/advanced_screen_title"
            app:summary="@string/advanced_screen_summary"
            app:icon="@drawable/ic_debug"
            />
        <Preference
            app:key="settings_reset"
            app:title="@string/reset_title"
            app:summary="@string/reset_summary"
            app:icon="@drawable/ic_undo"
            />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
