<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bPad"
    android:layout_width="@dimen/inputMapPreferenceButtonSizeX5"
    android:layout_height="@dimen/inputMapPreferenceButtonSizeX3"
    android:focusable="false"
    android:focusableInTouchMode="false" >

    <Button
        android:id="@+id/buttonZ"
        style="@style/btnMappable"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/inputMapActivity_btnZ" />

    <Button
        android:id="@+id/buttonR"
        style="@style/btnMappable"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/inputMapActivity_btnR"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonL"
        style="@style/btnMappable"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/inputMapActivity_btnL"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonS"
        style="@style/btnMappable"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_start"
        android:text="@string/inputMapActivity_btnS" />

</RelativeLayout>