<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dPad"
    android:layout_width="@dimen/inputMapPreferenceButtonSizeX3"
    android:layout_height="@dimen/inputMapPreferenceButtonSizeX3"
    android:focusable="false"
    android:focusableInTouchMode="false" >

    <Button
        android:id="@+id/buttonDU"
        style="@style/btnMappableNoText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/ic_arrow_u"
        android:text="@string/inputMapActivity_btnDU" />

    <Button
        android:id="@+id/buttonDD"
        style="@style/btnMappableNoText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:drawableBottom="@drawable/ic_arrow_d"
        android:text="@string/inputMapActivity_btnDD" />

    <Button
        android:id="@+id/buttonDL"
        style="@style/btnMappableNoText"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:drawableLeft="@drawable/ic_arrow_l"
        android:text="@string/inputMapActivity_btnDL"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonDR"
        style="@style/btnMappableNoText"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:drawableRight="@drawable/ic_arrow_r"
        android:text="@string/inputMapActivity_btnDR"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonDC"
        style="@style/btnMappable"
        android:layout_centerInParent="true"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

</RelativeLayout>